# zoltraak

./: .gitignore  Cargo.toml
client/: CLIENT.md  Cargo.toml  README.md
client/src/: lib.rs  main.rs  sysinfo_saver.rs
client/src/beacon/: beacon.rs  sender.rs
client/src/commands/: download.rs  execute.rs  mod.rs  send_file.rs  upload.rs
client/src/sysinfo/: mod.rs  saver.rs  uuid.rs
client/src/utils/: mod.rs  request.rs
server/: .env.template  Dockerfile  config.py  deploy.sh  docker-compose.yml  nginx.conf  requirements.txt  wait-for.sh
server/app/: __init__.py  models.py  routes.py
server/app/api/: routes.py  services.py
server/app/config/certificates/: generate_certs.sh
server/app/database/: models.py
server/src/: server.py
src/: main.rs
