[package]
name = "zoltraak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
interfaces = "0.0.9"
mac_address = "1.1.7"
rand = "0.8.5"
reqwest = { version = "0.12.5" , features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120" 
sysinfo = "0.30.12"
tokio = { version = "1.38.0" , features = ["full"] }

[dependencies.uuid]
version = "1.9.1"
features = [ "v4", "fast-rng", "macro-diagnostics", "serde" ]
